// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders for "content-moderator" badge permission 1`] = `
<Avatar
  alt="User avatar"
  badge="content-moderator"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
    <Badge
      badge="content-moderator"
      className=""
    >
      <span
        className="wds-avatar__badge "
        title="Content Moderator"
      >
        <_default>
          <_default>
            <div />
          </_default>
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;

exports[`Avatar renders for "discussion-moderator" badge permission 1`] = `
<Avatar
  alt="User avatar"
  badge="discussion-moderator"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
    <Badge
      badge="discussion-moderator"
      className=""
    />
  </div>
</Avatar>
`;

exports[`Avatar renders for "global-discussions-moderator" badge permission 1`] = `
<Avatar
  alt="User avatar"
  badge="global-discussions-moderator"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
    <Badge
      badge="global-discussions-moderator"
      className=""
    >
      <span
        className="wds-avatar__badge "
        title="Global Discussions Moderator"
      >
        <_default>
          <_default>
            <div />
          </_default>
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;

exports[`Avatar renders for "helper" badge permission 1`] = `
<Avatar
  alt="User avatar"
  badge="helper"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
    <Badge
      badge="helper"
      className=""
    >
      <span
        className="wds-avatar__badge "
        title="FANDOM Helper"
      >
        <_default>
          <_default>
            <div />
          </_default>
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;

exports[`Avatar renders for "staff" badge permission 1`] = `
<Avatar
  alt="User avatar"
  badge="staff"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
    <Badge
      badge="staff"
      className=""
    >
      <span
        className="wds-avatar__badge "
        title="FANDOM Staff"
      >
        <_default>
          <_default>
            <div />
          </_default>
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;

exports[`Avatar renders for "sysop" badge permission 1`] = `
<Avatar
  alt="User avatar"
  badge="sysop"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
    <Badge
      badge="sysop"
      className=""
    >
      <span
        className="wds-avatar__badge "
        title="Community Admin"
      >
        <_default>
          <_default>
            <div />
          </_default>
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;

exports[`Avatar renders for "vstf" badge permission 1`] = `
<Avatar
  alt="User avatar"
  badge="vstf"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
    <Badge
      badge="vstf"
      className=""
    >
      <span
        className="wds-avatar__badge "
        title="VSTF"
      >
        <_default>
          <_default>
            <div />
          </_default>
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;

exports[`Avatar renders when incorrect badgePermission is set 1`] = `
<Avatar
  alt="User avatar"
  badge="someIncorrectBadgePermission"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
    <Badge
      badge="someIncorrectBadgePermission"
      className=""
    />
  </div>
</Avatar>
`;

exports[`Avatar renders with default props 1`] = `
<Avatar
  alt="User avatar"
>
  <div
    className="wds-avatar"
  >
    <AvatarImage
      alt="User avatar"
    >
      <_default
        className="wds-avatar__image"
        title="wds-avatar__image"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <div
            className="wds-avatar__image"
            title="wds-avatar__image"
          />
        </_default>
      </_default>
    </AvatarImage>
  </div>
</Avatar>
`;

exports[`Avatar renders with link builder 1`] = `
<Avatar
  alt="User avatar"
  linkBuilder={[Function]}
>
  <div
    className="wds-avatar"
  >
    <div>
      <AvatarImage
        alt="User avatar"
      >
        <_default
          className="wds-avatar__image"
          title="wds-avatar__image"
        >
          <_default
            className="wds-avatar__image"
            title="wds-avatar__image"
          >
            <div
              className="wds-avatar__image"
              title="wds-avatar__image"
            />
          </_default>
        </_default>
      </AvatarImage>
    </div>
  </div>
</Avatar>
`;

exports[`Avatar renders with props 1`] = `
<Avatar
  alt="alt"
  badge="sysop"
  className="class-name"
  href="href"
  src="src"
  title="title"
>
  <div
    className="wds-avatar class-name"
    title="title"
  >
    <a
      href="href"
    >
      <AvatarImage
        alt="alt"
        src="src"
      >
        <img
          alt="alt"
          className="wds-avatar__image"
          src="src"
          title="alt"
        />
      </AvatarImage>
    </a>
    <Badge
      badge="sysop"
      className=""
    >
      <span
        className="wds-avatar__badge "
        title="Community Admin"
      >
        <_default>
          <_default>
            <div />
          </_default>
        </_default>
      </span>
    </Badge>
  </div>
</Avatar>
`;
